Minor contrast fix

--- a/src/css/files.css
+++ b/src/css/files.css
@@ -73,3 +73,7 @@ fieldset.file-finder-form__element {
 label .file-finder-form__radio__fake:after {
   border-color: #666;
 }
+
+[type=radio]:checked+label .file-finder-form__radio__fake:before {
+  border-color: #6186CC;
+}
